# plugin_system_cpp

./: .gitignore  CMakeLists.txt  README.md  base_operations.pc.in  multiplication.pc.in  subtraction.pc.in
ConfigFiles/: division.pc.in  plugin_handling.pc.in  sum.pc.in
include/: base_operations.h  calculator.h  division.h  multiplication.h  subtraction.h  sum.h
include/plugin_handling/: factory.h  interfaces.h  loader.h  plugin_handling.h
include/plugin_system_management/: factory.h  interfaces.h  plugin.h  plugin_system_management.h
include/plugins/: division.h  multiplication.h  subtraction.h  sum.h
include/psdk/: loader.h
plugins/: libbase_operations.so.28.06.2021  libdivision.so.28.06.2021  libmultiplication.so.28.06.2021  libsubtraction.so.28.06.2021  libsum.so.28.06.2021
plugins/headers/: base_operations.h  division.h  multiplication.h  subtraction.h  sum.h
src/: base_operations.cpp  calculator.cpp  division.cpp  main.cpp  multiplication.cpp  subtraction.cpp  sum.cpp
src/plugin_handling/: factory.cpp  plugin_handling.cpp
src/plugin_system_management/: factory.cpp  plugin.cpp  plugin_system_management.cpp
src/plugins/: division.cpp  multiplication.cpp  subtraction.cpp  sum.cpp
templates/: plugin_interface_template.h  plugin_template.h
